--- a/SAYNA-FLE-PROJET3-052022.tex
+++ b/SAYNA-FLE-PROJET3-052022.tex
@@ -12,8 +12,8 @@
 \newcommand{\colo}[1]{{\color{blue}\textbf{#1}}}
 
 \author{Jean Lucien RANDRIANANTENANA}
-\title{Vers un français
-impeccable (B2)\\SAYNA-FLE-PROJET1-052022}
+\title{Français Langue
+Étrangère - Perfectionnement\\SAYNA-FLE-PROJET3-052022}
 \begin{document}
 \maketitle
 \tableofcontents
@@ -25,15 +25,41 @@ impeccable (B2)\\SAYNA-FLE-PROJET1-052022}
 
 \section{Remplacez le verbe mettre par un verbe plus précis} 
 \begin{enumerate}
-	\item Par amitié, il a mis la main sur son épaule. \item Il a mis toutes ses «économies dans son prêt. \item Elle a mis ses plus beaux vêtements pour cette occasion. \item J’ai faim, mets un peu de gâteau dans mon assiette. \item Ne laisse pas traîner tes jouets, mets-les dans le coffre. \item Cette feuille ne m’est d,aucune utilité, mets-la aux ordures. \item Prends ce colis et mets-le chez la voisine s’il-te-plaît. \item Il a mis la clé dans la serrure et a déverrouillé le cadenas. \item Il met trop de temps à faire ses devoirs.
+	\item Par amitié, il a \colo{posé} sa main sur son épaule. 
+	\item Il a mis toutes ses \og{}économies dans son prêt\fg{}. 
+	\item Elle a \colo{porté} ses plus beaux vêtements pour cette occasion. 
+	\item J’ai faim, mets un peu de gâteau dans mon assiette.
+	\item Ne laisse pas traîner tes jouets, \colo{range}-les dans le coffre. 
+	\item Cette feuille ne m’est d,aucune utilité, \colo{jette}-la aux ordures. 
+	\item Prends ce colis et \colo{donne}-le chez la voisine s’il-te-plaît. 
+	\item Il a \colo{entré} la clé dans la serrure et a déverrouillé le cadenas. 
+	\item Il \colo{prend} trop de temps à faire ses devoirs.
 \end{enumerate}
 \section{Remplacez le verbe faire par un verbe plus précis} 
 \begin{enumerate}
-	\item L’écrivain Victor Hugo a fait une œuvre considérable. \item Cette année, j’ai fait l’Andalousie. \item La DRH a fait une lettre de recommandation pour son stagiaire. \item Le chien a fait six kilomètres pour revenir jusqu’à la maison. \item Mon nouveau voisin fait du bruit la nuit : je ne peux m’y faire. \item La personne qui ment fait une faute grave. \item Il a vendu ses anciens vêtements pour se faire un peu d’argent. \item Le nouveau-né faisait 3,3 kg à sa naissance. \item Il a fait le tour de la piste en moins d’une minute. \item Pendant le cours, l’élève distrait faisait des dessins sur la table.
+	\item L’écrivain Victor Hugo a \colo{écrit} une œuvre considérable. 
+	\item Cette année, j’ai \colo{visité} l’Andalousie. 
+	\item La DRH a \colo{écrit} une lettre de recommandation pour son stagiaire. 
+	\item Le chien a \colo{parcouru} six kilomètres pour revenir jusqu’à la maison. 
+	\item Mon nouveau voisin \colo{est bruyant} la nuit : je ne peux m’y faire. 
+	\item La personne qui ment \colo{commet} une faute grave. 
+	\item Il a vendu ses anciens vêtements pour \colo{gagner} un peu d’argent. 
+	\item Le nouveau-né \colo{pesait} 3,3 kg à sa naissance. 
+	\item Il a \colo{fini} le tour de la piste en moins d’une minute. 
+	\item Pendant le cours, l’élève distrait \colo{dessinait} sur la table.
 \end{enumerate}
 
 \section{Remplacez le verbe avoir par un verbe plus précis}
 \begin{enumerate}
-	\item Venez dans notre boutique; nos clients auront aujourd’hui une réduction spéciale. \item Il n’est pas allé à son cours; il a mal au dos. \item Dans son milieu professionnel, il a une excellente réputation. \item J’ai une grosse angoisse. \item Chaque question a sa réponse. \item Ce magasin a des produits venu de la côte. \item Hier, Yasmine a ses nouvelles chaussures. \item Le patient a une rage de dent. \item Elle a trop de rêves en tête, elle ferait mieux de se concentrer sur ses études ! 1\item Le candidat ne s’est pas présenté à son entretien : il a eu des difficultés sur la route.
+	\item Venez dans notre boutique; nos clients \colo{obtiendront}  une réduction spéciale aujourd’hui. 
+	\item Il n’est pas allé à son cours; il \colo{souffre} au dos. 
+	\item Dans son milieu professionnel, il a une excellente réputation. 
+	\item Je \colo{suis} trop \colo{angoissé}. 
+	\item Chaque question \colo{possède} sa réponse. 
+	\item Ce magasin \colo{vend} des produits venu de la côte. 
+	\item Hier, Yasmine \colo{porte} ses nouvelles chaussures. 
+	\item Le patient \colo{souffre d'} une rage de dent. 
+	\item Elle \colo{est} trop \colo{distrait}, elle ferait mieux de se concentrer sur ses études ! 
+	\item Le candidat ne s’est pas présenté à son entretien : il a \colo{rencontré} des difficultés sur la route.
 \end{enumerate}
 \end{document}
